--- a/public/client/styles/styles.css
+++ b/public/client/styles/styles.css
@@ -40,10 +40,11 @@ li {
 }
 
 .subbar {
+
   background-color: #3F5F84;
   color: #88BDFA;
   margin-top: 20px;
-  height: 160px;
+  height: 40%;
 }
 
 .highlight {
@@ -77,16 +78,25 @@ a {
   color: #3F5F84;
 }
 
+div .sand-box{
+  overflow:auto;
+  max-height: 300px;
+  min-height: 200px;
+
+};
+
 .col-md-3 {
+  overflow: auto;
+  max-height: 160px;
   padding-right: 0px;
 }
 
 .col-md-9 {
+  overflow: auto;
   padding-right: 15em;
   padding-left: 45px;
   background-color: #122C4A;
   color: white;
-  height: 100%;
 }
 
 svg {
