--- a/public/client/styles/styles.css
+++ b/public/client/styles/styles.css
@@ -1,3 +1,8 @@
+li:hover  {
+  background-color: #122C4A;
+  color: white;
+}
+
 body { 
   padding-top: 30px;
 }
@@ -40,17 +45,12 @@ li {
 }
 
 .subbar {
-
   background-color: #3F5F84;
   color: #88BDFA;
   margin-top: 20px;
-  height: 40%;
+  min-height: 30%;
 }
 
-.highlight {
-  background-color: #122C4A;
-  color: white;
-}
 
 .summary {
   font-family: 'Georgia', 'Vollkorn', serif;
@@ -61,6 +61,9 @@ li {
   background-color: #122C4A;
 }
 
+div.container{
+  display:block;
+}
 .navbar-fixed-top {
   border-width: 0 0 0px;
 }
@@ -78,30 +81,40 @@ a {
   color: #3F5F84;
 }
 
-div .sand-box{
+div.sand-box {
   overflow:auto;
-  max-width:25%;
-  min-width:20%;
+  display:block;
   max-height: 300px;
   min-height: 200px;
 
 };
-
-.col-md-3 {
+.chart{
+  overflow:auto;
+  min-height:500px;
+}
+.keyword {
   overflow: auto;
+  max-width:25%;
   max-height: 160px;
   padding-right: 0px;
 }
 
-.col-md-9 {
+.navbar{
+  display:block;
+}
+
+div.story-description {
   overflow: auto;
   padding-right: 15em;
   padding-left: 45px;
   background-color: #122C4A;
   color: white;
+  max-width:75%;
 }
 
 svg {
+  overflow:auto;
+  padding:30px;
   margin-left: 80px;
   margin-top: 8px;
   font-size: 10px;
